[gd_scene load_steps=6 format=3 uid="uid://d0fvsix37pfps"]

[ext_resource type="Script" uid="uid://dcj05jiqbuq2p" path="res://assets/scenes/fishing.gd" id="1_hjnv8"]
[ext_resource type="Texture2D" path="res://assets/art/icons/user.PNG" id="2_hjnv8"]
[ext_resource type="Texture2D" uid="uid://d8cypenrecic" path="res://assets/art/others/fishbutton.png" id="4_moqas"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_moqas"]
load_path = "res://.godot/imported/pond.png-fa22570f15efdaba97a60c7cb7181fee.ctex"

[sub_resource type="FontFile" id="FontFile_moqas"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[node name="Fishing" type="Node2D"]
script = ExtResource("1_hjnv8")

[node name="Pond" type="Sprite2D" parent="."]
position = Vector2(397, 454)
scale = Vector2(0.731812, 0.587844)
texture = SubResource("CompressedTexture2D_moqas")

[node name="Penguin" type="Sprite2D" parent="."]
position = Vector2(808, 388)
scale = Vector2(0.4, 0.436)
texture = ExtResource("2_hjnv8")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PowerMeter" type="ProgressBar" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -536.5
offset_top = -79.0
offset_right = 536.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0

[node name="FishCounter" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_right = 55.5
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FishButton" type="TextureButton" parent="UI"]
offset_left = 980.0
offset_top = 347.0
offset_right = 2004.0
offset_bottom = 1371.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_moqas")
texture_pressed = ExtResource("4_moqas")
texture_hover = ExtResource("4_moqas")

[node name="FeedbackLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -160.0
offset_right = 105.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontFile_moqas")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -336.0
offset_bottom = 67.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Energy: 9 / 10"

[node name="EnergyTimerLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -296.0
offset_top = 72.0
offset_right = -31.0
offset_bottom = 121.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Next Energy In: 60s"
horizontal_alignment = 2

[node name="ExitButton" type="Button" parent="UI"]
offset_left = 40.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24
text = "Done Fishing ðŸŽ£"

[node name="EnergyRegenTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="UI/FishButton" to="." method="_on_fish_button_pressed"]
[connection signal="pressed" from="UI/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="EnergyRegenTimer" to="." method="_on_energy_regen_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
